--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11401,6 +11401,19 @@ video {
   z-index: auto;
 }
 
+.button {
+  background-color: #47cdff;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 0.5rem;
+  font-size: 0.875rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  box-shadow: 0 2px 7px 0 #b0eaff;
+}
+
 @media (min-width: 640px) {
   .sm\:sr-only {
     position: absolute;
