--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,3 +9,10 @@
 
 // // Bootstrap
 // @import '~bootstrap/scss/bootstrap';
+
+//#47cdff
+.button {
+    background-color: #47cdff; 
+    @apply text-white no-underline rounded-lg text-sm py-2 px-5;
+    box-shadow: 0 2px 7px 0 #b0eaff;
+}
