--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -16,3 +16,7 @@
     @apply text-white no-underline rounded-lg text-sm py-2 px-5;
     box-shadow: 0 2px 7px 0 #b0eaff;
 }
+
+.card {
+    @apply bg-white p-5 rounded-lg shadow;
+}
